[gd_scene load_steps=7 format=3 uid="uid://bbuayxywjl1v"]

[ext_resource type="PackedScene" uid="uid://cbboequg3adx8" path="res://Core/Scenes/Utils/custom_list_v2.tscn" id="1_081pw"]
[ext_resource type="Script" path="res://Core/gui/database/Items/box_items.gd" id="1_t7gnv"]
[ext_resource type="Script" path="res://Core/gui/database/Items/tab_manager.gd" id="2_nbrqq"]
[ext_resource type="Script" path="res://Core/Scenes/Tests/list_template_test.gd" id="3_bnv3q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7pe11"]
bg_color = Color(0.6, 0.6, 0.6, 0.0823529)
border_width_bottom = 1
border_color = Color(0.466181, 0.466181, 0.466181, 0.141176)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="GDScript" id="GDScript_75d1h"]
script/source = "extends HBoxContainer

signal item_clicked

func _gui_input(event):
	if event is InputEventMouseButton:
		if event.button_index == MOUSE_BUTTON_LEFT and event.pressed:
			item_clicked.emit()
"

[node name="BoxItems" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_t7gnv")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="itemList" parent="HSplitContainer/VBoxContainer" node_paths=PackedStringArray("custom_item_template") instance=ExtResource("1_081pw")]
unique_name_in_owner = true
layout_mode = 2
show_add_button = false
show_title = false
custom_item_template = NodePath("../list_template")

[node name="list_template" type="HBoxContainer" parent="HSplitContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
script = ExtResource("3_bnv3q")

[node name="Panel" type="Panel" parent="HSplitContainer/VBoxContainer/list_template"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_7pe11")

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/VBoxContainer/list_template/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/VBoxContainer/list_template/Panel/MarginContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
script = SubResource("GDScript_75d1h")

[node name="Label" type="Label" parent="HSplitContainer/VBoxContainer/list_template/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Test"

[node name="delete_item" type="Button" parent="HSplitContainer/VBoxContainer/list_template"]
layout_mode = 2
text = "DELETE"

[node name="TabContainer" type="TabContainer" parent="HSplitContainer"]
layout_mode = 2
script = ExtResource("2_nbrqq")

[connection signal="create_pressed" from="HSplitContainer/VBoxContainer/itemList" to="." method="_on_item_list_create_pressed"]
[connection signal="item_clicked" from="HSplitContainer/VBoxContainer/list_template/Panel/MarginContainer/HBoxContainer" to="HSplitContainer/VBoxContainer/list_template" method="_on_h_box_container_item_clicked"]
[connection signal="pressed" from="HSplitContainer/VBoxContainer/list_template/delete_item" to="HSplitContainer/VBoxContainer/list_template" method="_on_delete_item_pressed"]
